whoami/30-service.yml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami
spec:
  externalTrafficPolicy: Local
  selector:
    app: whoami
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
