whoami/40-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: whoami
  namespace: whoami
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: who.sost.ovh
    http:
      paths:
      - path: /
        backend:
          serviceName: whoami
          servicePort: 80
  tls:
    - secretName: who-tls-prod-cert
      hosts:
        - who.sost.ovh
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: whoami-internal
  namespace: whoami
  annotations:
    kubernetes.io/ingress.class: nginx-internal
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: who.internal.sost.ovh
    http:
      paths:
      - path: /
        backend:
          serviceName: whoami
          servicePort: 80
  tls:
    - secretName: who-internal-tls-prod-cert
      hosts:
        - who.internal.sost.ovh
